test/files/neg/bug1183.check
bug1183.scala:10: error: name clash: class Foo defines object Baz
 and its companion module object Foo defines class Baz
    object Baz
    ^
bug1183.scala:11: error: name clash: class Foo defines class Bam
 and its companion module object Foo defines object Bam
    class Bam
    ^
bug1183.scala:12: error: name clash: class Foo defines object Bar
 and its companion module object Foo defines class Bar
    object Bar
    ^
bug1183.scala:13: error: name clash: class Foo defines class Bar
 and its companion module object Foo defines class Bar
    case class Bar(i:Int)
         ^
four errors found
